# open-domain-query-classification

./: 01_DataPrivilegeClassification.ipynb  02_QuerySpecificationClassification.ipynb  03_Analysis.ipynb  LICENSE  README.md  Run_Specification_Experiment.ipynb  pyproject.toml  requirements.txt
common/: classification.py  model.py  nord_mpl.py  utils.py
data/annotator_guide/: Annotator Guide - Classifying Schema Dependence.md
data/development/: dev_set.parquet
data/development/schema_dependence/: schema_dependence_dev_set.parquet
data/development/sufficient_specification/: sufficient_specification_dev_set.parquet
data/inputs/: sampled_queries.parquet
data/outputs/sufficient_specification/: sufficient_query_specification_classification.parquet
data/test/: test_set.csv  test_set.parquet
data/test/data_privilege/: data_privilege_ann1.json  data_privilege_ann2.json
data/test/sufficient_specification/: sufficient_specification_annotated.json
prompts/combined/history/: 01_integrated_classification.json  02_integrated_classification.json
prompts/data_privilege/history/: 02_data_privilege.json  03_data_privilege.json
prompts/schema_dependence/: schema_dependence_classification.json
prompts/schema_dependence/history/: 01_schema_dependence.json  04_schema_dependence.json
prompts/sufficient_specification/: 11_sufficient_data_specification.json  12_sufficient_procedural_specification.json  14_sufficient_data_specification.json
prompts/sufficient_specification/history/: 01_sufficient_specification.json  02_sufficient_specification.json  (+10 more)
(+1 files in other folders)
